# fastapi-hatch-template

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: febb78421ae2_.py
seeds/: users.csv
src/: cli.py
src/fastapi_hatch_template/: __init__.py  config.py  main.py
src/fastapi_hatch_template/api/: main.py
src/fastapi_hatch_template/db/: database_dependency.py  session.py
src/fastapi_hatch_template/schemas/: __init__.py  user.py
src/models/: __init__.py  base_class.py  user.py
src/scripts/: __init__.py  seed_data.py
src/tests/: __init__.py  conftest.py  factories.py  test_users.py
